--- a/deploy.yaml
+++ b/deploy.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: davidalkobi/app
+        image: davidalkobi/app:c2b3234
         resources:
           limits:
             memory: "128Mi"
